# simd-c-

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  CMakeLists.txt  Readme.md  bazel-bin  bazel-out  bazel-simd  bazel-testlogs  conanfile.py  graph_info.json  makefile  packages.bzl  parseWithBun.ts  vcpkg-configuration.json  vcpkg.json  workspace
TestData/: string.txt
backup/: Astro.hxxpp  AstroSimd.hxxpp
bazel_packages/: eve.BUILD  fast_float.BUILD  gperftools.BUILD  lz4.BUILD  mio.BUILD  nanobench.BUILD  nlohmanJson.BUILD  simdjson.BUILD  sonic.BUILD  yyjson.BUILD
benchmark/: BUILD  benchmark__.json  compress_bench.cc  coroutine.cc  eve.cc  file_bench.cc  json_helper.cc  main.cc
bulker/: astro.json  astro_simd.json  bins.json  example2d.json  simple.ff  simple.json  twitter.min.json  twittermin.json
conanDeps/: conan_bzl.rc  conanbuild.sh  conanbuildenv-debug-armv8.sh  conanrun.sh  conanrunenv-debug-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  dependencies.bzl
conanDeps/fast_float/: BUILD.bazel
conanDeps/lz4/: BUILD.bazel
conanDeps/mio/: BUILD.bazel
conanDeps/taskflow/: BUILD.bazel
conanDeps/yyjson/: BUILD.bazel
conanDeps/zstd/: BUILD.bazel
fastContains/: BUILD  armneon.hpp  avx.hpp  avx2.hpp  avx512.hpp  package.hpp  simd.hpp  sse41.hpp  sse42.hpp  stdranges.hpp
log/: benchmark__.txt
src/: Astro.hpp  AstroSimd.hpp  BUILD  Compressor.hpp  Coroutine.hpp  EveTest.hpp  EventEmitter.hpp  JSONHelper.hpp  JSONSerializer.hpp  PerformanceLogger.hpp  StorageEngine.hpp  corotines.hpp  enums.hpp  exp.hpp  main.cc  mmap.hpp  package.hpp  simdTool.hpp  validator.hpp
src/internal/columns/: numeric_types.hpp
src/internal/helpers/: intToHex.hpp  stringToHex.hpp
src/internal/page/: dataMap.hpp  header.hpp  types.hpp
tests/: BUILD  Readme.md  dom.cc  hex_test.cc  json_parser.cc  main.cc  main_test.cc  mmap.cc  pageHeader.cc
