load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

# Components precompiled libs

# Root package precompiled libs

# Components libraries declaration
cc_library(
    name = "fast_float-fastfloat",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)

# Package library declaration
cc_library(
    name = "fast_float",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":fast_float-fastfloat",
    ],
)

# Filegroup library declaration
