load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

# Components precompiled libs

# Root package precompiled libs

# Components libraries declaration
cc_library(
    name = "mio-mio-headers",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)

# Package library declaration
cc_library(
    name = "mio",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":mio-mio-headers",
    ],
)

# Filegroup library declaration
