load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

# Components precompiled libs
# Root package precompiled libs

# Components libraries declaration
# Package library declaration
cc_library(
    name = "taskflow",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
)

# Filegroup library declaration
