load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

# Components precompiled libs
# Root package precompiled libs
cc_import(
    name = "yyjson_precompiled",
    static_library = "lib/libyyjson.a",
)

# Components libraries declaration
# Package library declaration
cc_library(
    name = "yyjson",
    hdrs = glob([
        "include/**",
    ]),
    includes = [
        "include",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":yyjson_precompiled",
    ],
)

# Filegroup library declaration
filegroup(
    name = "yyjson_binaries",
    srcs = glob([
        "bin/**",
    ]),
    visibility = ["//visibility:public"],
)
